Fixed Footer whitespace :lipstick:

--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,3 @@ a:active {
   
   }      
 
-  .navbar-toggler:focus,
-.navbar-toggler:active,
-.navbar-toggler-icon:focus {
-    outline: none;
-    box-shadow: none;
-}
